# veloce

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
include/emu/: audio_plugin.hpp  controller_layout.hpp  emulator_plugin.hpp  input_plugin.hpp  input_types.hpp  speedrun_plugin.hpp  tas_plugin.hpp
plugins/audio_default/: CMakeLists.txt
plugins/audio_default/src/: default_audio_plugin.cpp
plugins/input_default/: CMakeLists.txt
plugins/input_default/src/: default_input_plugin.cpp
plugins/nes/: CMakeLists.txt  README.md
plugins/nes/src/: apu.cpp  apu.hpp  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  debug.hpp  nes_plugin.cpp  ppu.cpp  ppu.hpp
plugins/nes/src/mappers/: mapper.cpp  mapper.hpp  mapper_000.cpp  mapper_000.hpp  mapper_001.cpp  mapper_001.hpp  mapper_002.cpp  mapper_002.hpp  mapper_003.cpp  mapper_003.hpp  mapper_004.cpp  mapper_004.hpp  mapper_007.cpp  mapper_007.hpp  mapper_009.cpp  mapper_009.hpp  mapper_010.cpp  mapper_010.hpp  mapper_011.cpp  mapper_011.hpp  mapper_034.cpp  mapper_034.hpp  mapper_066.cpp  mapper_066.hpp  mapper_071.cpp  mapper_071.hpp  mapper_079.cpp  mapper_079.hpp  mapper_206.cpp  mapper_206.hpp
plugins/nes/tests/: run_tests.sh  test_config.json  test_runner.py
plugins/tas_default/: CMakeLists.txt
plugins/tas_default/src/: default_tas_plugin.cpp
src/core/: application.cpp  application.hpp  audio_manager.cpp  audio_manager.hpp  input_manager.cpp  input_manager.hpp  main.cpp  plugin_manager.cpp  plugin_manager.hpp  renderer.cpp  renderer.hpp  savestate_manager.cpp  savestate_manager.hpp  speedrun_manager.cpp  speedrun_manager.hpp  window_manager.cpp  window_manager.hpp
src/gui/: debug_panel.cpp  debug_panel.hpp  game_view.cpp  game_view.hpp  gui_manager.cpp  gui_manager.hpp  input_config_panel.cpp  input_config_panel.hpp  main_menu.cpp  main_menu.hpp  speedrun_panel.cpp  speedrun_panel.hpp
